--- a/apps/docs/app/(docs)/components/dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/dialog/page.mdx
@@ -52,7 +52,10 @@ export default () => (
 
 Use the `open` and `defaultOpen` props to toggle between controlled and uncontrolled usage. And combine it with `onOpenChange` to listen for changes to the state.
 
-<Demo component="dialog/controlled-usage" meta="{19}" />
+<Demo
+  component="dialog/controlled-usage"
+  meta="/onOpenChange={setOpen}/ /open={open}/"
+/>
 
 ### Sizes
 
@@ -64,7 +67,7 @@ Use the `size` prop to change the size of the dialog box.
 
 You can add accessible description to the modal using the `description` prop on `DialogHeader` component.
 
-<Demo component="dialog/description-usage" meta="{18}" />
+<Demo component="dialog/description-usage" meta="/description/" />
 
 ### Customize trigger
 
@@ -72,13 +75,13 @@ By default we use the `Button` component for the dialog trigger which accepts al
 
 We can also completely change the trigger by using `asChild` and passing our own component.
 
-<Demo component="dialog/trigger-usage" meta="{18-22}" />
+<Demo component="dialog/trigger-usage" meta="{15-19}" />
 
 ### Form dialogs
 
 Wrap `DialogBody` and `DialogFooter` with the `DialogForm` component to use forms in dialogs.
 
-<Demo component="dialog/form-usage" meta="{33-43,64}" />
+<Demo component="dialog/form-usage" meta="{30-40,61}" />
 
 ### Nested dialogs
 
