rename toast "type" property to "intent"
for consistency but fallback to keep supporting existing usages

--- a/apps/docs/app/(docs)/components/toast/page.mdx
+++ b/apps/docs/app/(docs)/components/toast/page.mdx
@@ -16,7 +16,7 @@ Use `toaster.create()` to add toasts. The method takes two arguments `message` a
 
 ### Appearance
 
-Use the `type` option in the second argument to select between the different toast types.
+Use the `intent` option in the second argument to select between the different toast types.
 
 <Demo component="toast/appearance-usage" />
 
