use controlled dialog from dropdown menu
instead of composing trigger with item

we should not have a dropdown menu open while interacting with something else
plus this will make it easier to replace dropdown menu with menu for consumers
or if we ever decide to switch out dialog from radix with something else
entirely

--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -114,7 +114,7 @@ Use `DropdownMenuSub`, `DropdownMenuSubTrigger`, and `DropdownMenuSubContent` to
 
 Combine dropdown menus with dialog to show alerts when selecting an item.
 
-Make sure to enable `asChild` prop on `AlertDialogTrigger` and call `event.preventDefault()` in the item `onSelect` handler.
+Make sure to use `AlertDialog` or `Dialog` in controlled mode since there is no actual trigger.
 
 <Demo component="dropdown-menu/alert-dialog-usage" meta="{27,31}" />
 
