clarify nested dialog demo

--- a/apps/docs/app/(docs)/components/dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/dialog/page.mdx
@@ -96,7 +96,7 @@ Combine `Dialog` with `AlertDialog` to show nested confirmation dialogs.
 Use the `onOpenChange` handler to trigger the nested callback instead of an explicit trigger.
 
 <Alert intent="warning" mt="16">
-  Type something into the text field and then attempt to close the dialog:
+  Type something into the text field and then attempt to cancel the dialog:
 </Alert>
 
 <Demo component="dialog/alert-dialog-usage" />
