rename BreadcrumbLink type to BreadcrumbItem
and rename the old BreadcrumbItem component to BreadcrumbNode

--- a/apps/docs/app/(docs)/components/breadcrumb/page.mdx
+++ b/apps/docs/app/(docs)/components/breadcrumb/page.mdx
@@ -15,7 +15,7 @@ Display a list of links showing the location of the current page in the navigati
 
 ### Structure
 
-Breadcrumb works with lists of items provided via the `items` prop. Items must be an array of objects of `BreadcrumbLink` type and at minimum must contain the `label` property.
+Breadcrumb works with lists of items provided via the `items` prop. Items must be an array of objects of `BreadcrumbItem` type and at minimum must contain the `label` property.
 
 #### Links
 
