clarify difference between Select and Menu
show warning on Select about usage in forms

and change related items to only include form controls for Select/RadioGroup

--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -120,7 +120,7 @@ Make sure to use `AlertDialog` or `Dialog` in controlled mode since there is no 
 
 ### Related
 
-<Cards items={["Menu", "Select"]} />
+<Cards items={["Menu"]} />
 
 ## Props
 
