--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -3,7 +3,7 @@ import { Alert, Flex, Kbd } from "@optiaxiom/react";
 
 # Menu
 
-Multi-purpose combobox widget to allow selection from a dynamic set of options.
+Dropdown menu for displaying actions.
 
 <Links component="menu" />
 
@@ -181,7 +181,7 @@ Menu automatically uses virtualization to improve performance when rendering a l
 
 ### Related
 
-<Cards items={["DropdownMenu", "Select"]} />
+<Cards items={["DropdownMenu"]} />
 
 ## Props
 
