--- a/apps/docs/app/(docs)/components/radio-group/page.mdx
+++ b/apps/docs/app/(docs)/components/radio-group/page.mdx
@@ -44,7 +44,7 @@ Use the `description` prop to add helper text after the label.
 
 ### Related
 
-<Cards items={["Checkbox", "Switch"]} />
+<Cards items={["Checkbox", "Select", "Switch"]} />
 
 ## Props
 
