allow readonly pills by adding an onDismiss prop

--- a/apps/docs/app/(docs)/components/pill/page.mdx
+++ b/apps/docs/app/(docs)/components/pill/page.mdx
@@ -18,6 +18,12 @@ Use the `size` prop to modify the size of the button.
 
 <Demo component="pill/size-usage" />
 
+### Dismissible
+
+Use the `onDismiss` prop to show a close button inside the pill.
+
+<Demo component="pill/dismiss-usage" />
+
 ### Disabled state
 
 Set the `disabled` prop to `true` to disable pills and prevent any interactions.
@@ -47,6 +53,10 @@ Use the `<PillGroup />` component to group related pills together.
 <PropsTable component="PillGroup" />
 
 ## Changelog
+
+### 1.6.0
+
+- Added `onDismiss` prop
 
 ### 0.12.4
 
