--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -7,9 +7,10 @@ Display a dropdown menu.
 
 <Links component="dropdown-menu" />
 
-<Alert intent="information" mt="16">
-  Try out our new fully featured [Menu](../menu/) component that has a simpler
-  API, allows filtering/selecting items, and includes built-in virtualization.
+<Alert intent="danger" mt="16">
+  **DropdownMenu** has been deprecated in favor of our new fully featured
+  [Menu](../menu/) component that has a simpler API, allows filtering/selecting
+  items, and includes built-in virtualization.
 </Alert>
 
 ## Documentation
