--- a/apps/docs/app/(docs)/components/select/page.mdx
+++ b/apps/docs/app/(docs)/components/select/page.mdx
@@ -10,7 +10,7 @@ Select a value from a list of options inside a dropdown menu. This is an alterna
 <Alert intent="information" mt="16">
   This component is meant to capture user input and should only be used inside
   forms. If you need an action menu or a generic dropdown menu please use
-  [DropdownMenu](../dropdown-menu/) instead.
+  [Menu](../menu/) instead.
 </Alert>
 
 ## Documentation
