--- a/apps/docs/app/(docs)/guides/icons/page.mdx
+++ b/apps/docs/app/(docs)/guides/icons/page.mdx
@@ -5,9 +5,9 @@ import { Alert, Heading } from "@optiaxiom/react";
 We use a licensed **Font Awesome** icon kit with our Optimizely Design System.
 
 <Alert intent="warning" mt="16">
-<p>**Optimizely staff** should always use icons from our **Font Awesome** icon kit.</p>
+<p style={{ margin: 0 }}>**Optimizely staff** should always use icons from our **Font Awesome** icon kit.</p>
 
-<p>**Third party developers** can use any available icon library to build extensions.</p>
+<p style={{ margin: 0 }}>**Third party developers** can use any available icon library to build extensions.</p>
 </Alert>
 
 ## Installation
