improve component description

--- a/apps/docs/app/(docs)/components/file-upload/page.mdx
+++ b/apps/docs/app/(docs)/components/file-upload/page.mdx
@@ -3,7 +3,7 @@ import { Alert } from "@optiaxiom/react";
 
 # FileUpload
 
-Allow file uploads via dragging and dropping.
+Capture file input from users with drag and drop.
 
 <Links component="file-upload" />
 
