--- a/apps/docs/app/(docs)/components/breadcrumb/page.mdx
+++ b/apps/docs/app/(docs)/components/breadcrumb/page.mdx
@@ -51,6 +51,18 @@ This can be configured using the `maxItems` prop.
 
 ## Changelog
 
+### 1.6.0
+
+- Moved component out of **Alpha**.
+
+  ```jsx
+  // Before
+  import { Breadcrumb } from "@optiaxiom/react/unstable";
+
+  // After
+  import { Breadcrumb } from "@optiaxiom/react";
+  ```
+
 ### 1.5.2
 
 - Simplified `Breadcrumb` API:
