add anatomy of DetailsPanel

--- a/apps/docs/app/(docs)/components/details-panel/page.mdx
+++ b/apps/docs/app/(docs)/components/details-panel/page.mdx
@@ -13,6 +13,25 @@ Panel for showing additional content on the right side of the page.
 
 <Demo component="details-panel/usage" />
 
+### Anatomy
+
+```tsx
+import {
+  DetailsPanel,
+  DetailsPanelBody,
+  DetailsPanelFooter,
+  DetailsPanelHeader,
+} from "@optiaxiom/react/unstable";
+
+export default () => (
+  <DetailsPanel>
+    <DetailsPanelHeader />
+    <DetailsPanelBody />
+    <DetailsPanelFooter />
+  </DetailsPanel>
+);
+```
+
 ## Props
 
 ### DetailsPanel
