document disabled menu options

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -117,6 +117,12 @@ We can add the `addon` and `description` properties to show additional content i
 
 <Demo component="menu/addon-usage" meta={{ "App.tsx": "{22-28}" }} />
 
+### Disabled items
+
+Use the `disabledReason` property to disable the menu items.
+
+<Demo meta="/disabledReason/" component="menu/disabled-usage" />
+
 ### Appearance
 
 Use the `intent` prop to control the appearance of items.
