allow external links in menu items

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -141,6 +141,12 @@ If the `execute` property is omitted then clicking an item will simply follow th
 
 <Demo component="menu/link-usage" meta="{8,12}" />
 
+#### External
+
+We can toggle the `external` property to show an external link icon and open links in a new tab by default.
+
+<Demo component="menu/link-external-usage" meta="{9}" />
+
 ### Groups
 
 Use `group` property to group items.
