allow asChild composition of DisclosureTrigger

--- a/apps/docs/app/(docs)/components/disclosure/page.mdx
+++ b/apps/docs/app/(docs)/components/disclosure/page.mdx
@@ -51,6 +51,14 @@ Use the `addonBefore` and `addonAfter` prop to add icons, text, or any other int
 
 <Demo component="disclosure/addon-usage" />
 
+### Customize trigger
+
+By default we use a `button` for the disclosure trigger which always shows a chevron indicator.
+
+We can also completely change the trigger by using `asChild` and passing our own component.
+
+<Demo component="disclosure/trigger-usage" meta="{12-14}" />
+
 ## Props
 
 ### Disclosure
