add icons tool to mcp

--- a/apps/docs/app/(docs)/guides/icons/page.mdx
+++ b/apps/docs/app/(docs)/guides/icons/page.mdx
@@ -1,4 +1,4 @@
-import { Alert, Heading } from "@optiaxiom/react";
+import { Alert } from "@optiaxiom/react";
 
 # Icons (Optimizely staff only)
 
@@ -25,7 +25,17 @@ npm install @optimizely/axiom-icons
 Simply import the components and use them in your application.
 
 ```tsx
-import { IconMessages } from "@optimizely/icons";
+import { IconMessages } from "@optimizely/axiom-icons";
 
 <IconMessages />;
 ```
+
+## Available Icons
+
+When using AI assistants like Claude Code with the Axiom MCP server, you can search for available icons using natural language:
+
+- "Search for message icons"
+- "Find arrow icons"
+- "Show user-related icons"
+
+The MCP server includes a `search_icons` tool that helps you discover the right icon component for your needs from our collection of licensed Font Awesome Pro icons.
